- Add article list with it's states.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="title_general">General</string>
     <string name="title_business">Business</string>
     <string name="title_technology">Technology</string>
+    <string name="retry">Retry</string>
 </resources>
